--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
           CSS 3
         </div>
         <div class="list__item">
+          SCSS
+        </div>
+        <div class="list__item">
           JS, TS
         </div>
         <div class="list__item">
