--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="list__item">
           <div class="project">
             <div class="project__title">
-              Утилита для работы работы с матрицами методом Гаусса
+              Утилита для работы с матрицами методом Гаусса
             </div>
             <div class="project__link">
               https://pyc-nya.github.io/gaussian-matrix-solver/
