--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
           HTML 5
         </div>
         <div class="list__item">
-          CSS 3
+          Адаптивная верстка CSS 3
         </div>
         <div class="list__item">
-          SCSS
+          Адаптивная верстка SCSS
         </div>
         <div class="list__item">
           JS, TS
@@ -154,6 +154,10 @@
         </div>
         <div class="list__item">
           Git
+        </div>
+        </div>
+        <div class="list__item">
+          Знание архитектур приложений: MVC/MVP, MVVM
         </div>
       </div>
       <div class="education list">
