--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           React, Redux, MobX
         </div>
         <div class="list__item">
-          Git
+          Git, GitHub
         </div>
         </div>
         <div class="list__item">
